tests/rosetta/out/C/canny-edge-detector.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:49Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:49Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static list_float concat_list_float(list_float a, list_float b) {
  list_float r = list_float_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static list_list_int concat_list_list_int(list_list_int a, list_list_int b) {
  list_list_int r = list_list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static double PI = 3.141592653589793;

int conv2d(int img, int k) {
  int h = img.len;
  int w = img.data[0].len;
  int n = k.len;
  double half = ((double)n) / ((double)2);
  int y = 0;
  while (y < h) {
    list_float row = list_float_create(0);
    int x = 0;
    while (x < w) {
      double sum = 0.0;
      int j = 0;
      while (j < n) {
        int i = 0;
        while (i < n) {
          double yy = y + j - half;
          if (yy < 0) {
            yy = 0;
          }
          if (yy >= h) {
            yy = h - 1;
          }
          double xx = x + i - half;
          if (xx < 0) {
            xx = 0;
          }
          if (xx >= w) {
            xx = w - 1;
          }
          sum = sum + img.data[yy].data[xx] * k.data[j].data[i];
          i = i + 1;
        }
        j = j + 1;
      }
      row = 0;
      x = x + 1;
    }
    out = 0;
    y = y + 1;
  }
  return out;
}

int gradient(int img) {
  list_float hx = list_float_create(3);
  hx.data[0] = (-1.0);
  hx.data[1] = 0.0;
  hx.data[2] = 1.0;
  list_float hx = list_float_create(3);
  hx.data[0] = (-2.0);
  hx.data[1] = 0.0;
  hx.data[2] = 2.0;
  list_float hx = list_float_create(3);
  hx.data[0] = (-1.0);
  hx.data[1] = 0.0;
  hx.data[2] = 1.0;
  list_int hx_data[] = {hx, hx, hx};
  list_list_int hx = {3, hx_data};
  list_float tmp1 = list_float_create(3);
  tmp1.data[0] = 1.0;
  tmp1.data[1] = 2.0;
  tmp1.data[2] = 1.0;
  list_float tmp2 = list_float_create(3);
  tmp2.data[0] = 0.0;
  tmp2.data[1] = 0.0;
  tmp2.data[2] = 0.0;
  list_float hy = list_float_create(3);
  hy.data[0] = (-1.0);
  hy.data[1] = (-2.0);
  hy.data[2] = (-1.0);
  list_int hy_data[] = {tmp1, tmp2, hy};
  list_list_int hy = {3, hy_data};
  int gx = conv2d(img, hx);
  int gy = conv2d(img, hy);
  int h = img.len;
  int w = img.data[0].len;
  int y = 0;
  while (y < h) {
    list_float row = list_float_create(0);
    int x = 0;
    while (x < w) {
      double g = gx.data[y].data[x] * gx.data[y].data[x] +
                 gy.data[y].data[x] * gy.data[y].data[x];
      list_float tmp3 = list_float_create(1);
      tmp3.data[0] = g;
      list_float tmp4 = concat_list_float(row, tmp3);
      row = tmp4;
      x = x + 1;
    }
    out = 0;
    y = y + 1;
  }
  return out;
}

list_list_int threshold(int g, double t) {
  int h = g.len;
  int w = g.data[0].len;
  list_list_int out = {0, NULL};
  int y = 0;
  while (y < h) {
    list_int row = list_int_create(0);
    int x = 0;
    while (x < w) {
      if (g.data[y].data[x] >= t) {
        int tmp5_data[1];
        list_int tmp5 = {1, tmp5_data};
        tmp5.data[0] = 1;
        list_int tmp6 = concat_list_int(row, tmp5);
        row = tmp6;
      } else {
        int tmp7_data[1];
        list_int tmp7 = {1, tmp7_data};
        tmp7.data[0] = 0;
        list_int tmp8 = concat_list_int(row, tmp7);
        row = tmp8;
      }
      x = x + 1;
    }
    list_list_int tmp9 = list_list_int_create(1);
    tmp9.data[0] = row;
    list_list_int tmp10 = concat_list_list_int(out, tmp9);
    out = tmp10;
    y = y + 1;
  }
  return out;
}

int printMatrix(list_list_int m) {
  int y = 0;
  while (y < m.len) {
    char *line = "";
    int x = 0;
    while (x < m.data[0].len) {
      char *tmp11 = _str(m.data[y].data[x]);
      char *tmp12 = concat_string(line, tmp11);
      line = tmp12;
      if (x < m.data[0].len - 1) {
        char *tmp13 = concat_string(line, " ");
        line = tmp13;
      }
      x = x + 1;
    }
    printf("%s\n", line);
    y = y + 1;
  }
}

int mochi_main() {
  list_float tmp14 = list_float_create(5);
  tmp14.data[0] = 0.0;
  tmp14.data[1] = 0.0;
  tmp14.data[2] = 0.0;
  tmp14.data[3] = 0.0;
  tmp14.data[4] = 0.0;
  list_float tmp15 = list_float_create(5);
  tmp15.data[0] = 0.0;
  tmp15.data[1] = 255.0;
  tmp15.data[2] = 255.0;
  tmp15.data[3] = 255.0;
  tmp15.data[4] = 0.0;
  list_float tmp16 = list_float_create(5);
  tmp16.data[0] = 0.0;
  tmp16.data[1] = 255.0;
  tmp16.data[2] = 255.0;
  tmp16.data[3] = 255.0;
  tmp16.data[4] = 0.0;
  list_float tmp17 = list_float_create(5);
  tmp17.data[0] = 0.0;
  tmp17.data[1] = 255.0;
  tmp17.data[2] = 255.0;
  tmp17.data[3] = 255.0;
  tmp17.data[4] = 0.0;
  list_float tmp18 = list_float_create(5);
  tmp18.data[0] = 0.0;
  tmp18.data[1] = 0.0;
  tmp18.data[2] = 0.0;
  tmp18.data[3] = 0.0;
  tmp18.data[4] = 0.0;
  list_int img_data[] = {tmp14, tmp15, tmp16, tmp17, tmp18};
  list_list_int img = {5, img_data};
  int g = gradient(img);
  list_list_int edges = threshold(g, 1020.0 * 1020.0);
  printMatrix(edges);
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
